Replacing most alerts with react-toastify notifications, removed some console logs, using socket to update friend request status for the requester in real time

--- a/src/index.css
+++ b/src/index.css
@@ -383,6 +383,15 @@ ul {
   margin-left: 20px; /* Adds space between header and button */
 }
 
+.edit-description-form-btns {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.edit-description-form-btns > button {
+  width: 30%;
+}
+
 /* Description form styling */
 textarea {
   width: 100%;
